# financial-agent

./: .gitignore  .local_profile  README.md  cold_storage.json  pyproject.toml  requirements.txt
src/financial_agent/: agent_api.py  coinbase_client.py  cold_storage.py  debug_paths.py  main.py  models.py  plaid_client.py  plaid_store.py  portfolio_service.py  pricing_providers.py  settings.py
src/financial_agent/providers/: coinbase_provider.py  cold_storage_provider.py  protocols.py  schwab_plaid_provider.py
tests/: test_coinbase_client_unit.py  test_plaid_schwab_endpoints.py  test_portfolio_endpoint.py  test_value_endpoint.py
