[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-agent"
version = "0.1.0"
description = "Local AI-assisted investment agent (Coinbase v1)."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "fastapi",
  "uvicorn",
  "httpx",
  "python-dotenv",
  "coinbase-advanced-py",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
